<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.imilipocket.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.example.imilipocket.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions">
        <action
            android:id="@+id/actionTransactionsFragmentToAddTransactionFragment"
            app:destination="@id/addTransactionFragment" />
        <action
            android:id="@+id/actionTransactionsFragmentToEditTransactionFragment"
            app:destination="@id/editTransactionFragment" />
    </fragment>

    <fragment
        android:id="@+id/budgetFragment"
        android:name="com.example.imilipocket.ui.budget.BudgetFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.imilipocket.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/addTransactionFragment"
        android:name="com.example.imilipocket.ui.transaction.AddTransactionFragment"
        android:label="@string/title_add_transaction"
        tools:layout="@layout/fragment_add_transaction" />

    <fragment
        android:id="@+id/editTransactionFragment"
        android:name="com.example.imilipocket.ui.transaction.EditTransactionFragment"
        android:label="@string/title_edit_transaction"
        tools:layout="@layout/fragment_edit_transaction">
        <argument
            android:name="transactionId"
            app:argType="string" />
    </fragment>

</navigation> 