<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    android:padding="16dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        app:boxStrokeColor="@color/blue_500"
        app:hintTextColor="@color/blue_700"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/blue_900"
            android:animation="@anim/fade_in" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        app:boxStrokeColor="@color/blue_500"
        app:hintTextColor="@color/blue_700"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/blue_900"
            android:animation="@anim/fade_in" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_type"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/blue_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAmount" />

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewType">

        <RadioButton
            android:id="@+id/radioIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/type_income"
            android:textColor="@color/blue_900"
            android:buttonTint="@color/blue_500"
            android:animation="@anim/fade_in" />

        <RadioButton
            android:id="@+id/radioExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_expense"
            android:textColor="@color/blue_900"
            android:buttonTint="@color/blue_500"
            android:animation="@anim/fade_in" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_category"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/blue_900"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupType" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_500"
        android:animation="@anim/fade_in"
        app:layout_constraintTop_toBottomOf="@id/textViewCategory" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_delete"
        android:backgroundTint="@color/red_500"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        android:animation="@anim/fade_in"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_save"
        android:backgroundTint="@color/blue_500"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        android:animation="@anim/fade_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/btn_cancel"
        android:backgroundTint="@color/blue_200"
        android:textColor="@color/blue_900"
        app:cornerRadius="12dp"
        android:animation="@anim/fade_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSave"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>